# tg-nft-bot

./: .gitignore  Procfile  README.md  app.py  bot.py  credentials.py  filter.ts  graphql.py  helpers.py  main.py  models.py  nfts.py  pyproject.toml  qraphQLResponse.txt  reflections.py  requirements.txt  result.json  setup.py  test.py
@misc/: receipt.json  run_local_db.sh  test.py  testTronpy.py  test_database.sh
assets/: EARN.json  NFT.json
tests/: test_addresses.py  test_app.py  test_db.py  test_nft.py  test_utils.py  test_webhooks.py  test_wh_resp_evm_mint.json  test_wh_resp_tron_mint.json  test_wh_resp_tron_sale.json
tests/payloads/: raw_payload.json  test_full_res_tron_sale.json  test_wh_resp_evm_mint.json  test_wh_resp_evm_sale.json
tests/setup/: setup_ngrok.sh  setup_postgres.sh
tg_nft_bot/: main.py
tg_nft_bot/bot/: bot_app.py  bot_config.py  bot_utils.py
tg_nft_bot/config/: local.py
tg_nft_bot/db/: db_operations.py
tg_nft_bot/nft/: nft_constants.py  nft_operations.py
tg_nft_bot/streams/: streams_operations.py  streams_utils.py
tg_nft_bot/utils/: addresses.py  credentials.py  networks.py
tg_nft_bot/webhooks/: webhook_operations.py
